tests/invalid/generic_component_method_not_supported.wio
component UtilityBox {
    fn Identity<T>(value: T) -> T {
        return value;
    }
}

fn Entry() -> i32 {
    return 0;
}
